--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /server/cdk.out/
+client/Application/.angular/
+client/Application/node_modules/
+client/Application/package-lock.json
+client/Application/yarn.lock
+server/cdk/cdk.out/
+server/cdk/node_modules/
